<?xml version="1.0"?>
<package>
  <name>pimouse_run_corridor</name>
  <version>0.1.0</version>
  <description>The pimouse_run_corridor package</description>

  <maintainer email="ryuichiueda@gmail.com">Ryuichi Ueda</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>pimouse_ros</run_depend>

</package>
